--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'application'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 mainClassName = 'uno.rebellious.twitchbot.MainKt'
 
