--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ install: gradle clean
 script: gradle shadowJar
 deploy:
   provider: releases
-  api_key: "GITHUB OAUTH TOKEN"
+  api_key: $githubToken
   file: "FILE TO UPLOAD"
   skip_cleanup: true
   on:
