chore(cleanup): cleanup code

--- a/src/main/resources/sample-settings.properties
+++ b/src/main/resources/sample-settings.properties
@@ -1,6 +1,6 @@
-nick = IamAGoodBot
-password = oauth:abcdefghijklem
-lastfm = 12345678
-channel = MyChannel
-lastFmUser = LastFmUser
-spotifyOAuth = bearerToken
+nick=IamAGoodBot
+password=oauth:abcdefghijklem
+lastfm=12345678
+channel=MyChannel
+lastFmUser=LastFmUser
+spotifyOAuth=bearerToken
