--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
     implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
     testImplementation("org.junit.jupiter:junit-jupiter:5.6.2")
+    testImplementation 'org.mockito:mockito-core:3.3.3'
 }
 
 compileKotlin {
