chore(): Update events

--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ compileTestKotlin {
 tasks.test {
     useJUnitPlatform()
     testLogging {
-        events("passed", "skipped", "failed")
+        events "passed", "skipped", "failed"
     }
 }
 
