--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
     testImplementation("org.junit.jupiter:junit-jupiter:5.6.2")
     testImplementation 'org.mockito:mockito-core:3.3.3'
+//    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
 }
 
 compileKotlin {
