test(Quotes):  Test Exception Logging

--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,8 @@ tasks.test {
     useJUnitPlatform()
     testLogging {
         events "passed", "skipped", "failed"
+        showStackTraces = true
+        exceptionFormat = TestExceptionFormat.FULL
     }
 }
 
