tests(Quotes): Set time to UTC

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install: gradle clean
 
 jobs:
   include:
-    - state: Check Timezone
+    - stage: Check Timezone
       script: timedatectl
     - stage: test
       script: gradle check
