--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ group 'uno.rebellious'
 version '1.7.1-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
     ext.hamcrestVersion = '2.2'
 
     repositories {
@@ -15,7 +14,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72'
         classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
     }
 }
@@ -37,13 +36,13 @@ repositories {
 dependencies {
     implementation 'com.github.salomonbrys.kotson:kotson:2.5.0'
     implementation 'com.github.Gikkman:Java-Twirk:0.5'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72'
     implementation 'com.github.kittinunf.fuel:fuel:2.2.1' //for JVM
     implementation 'com.beust:klaxon:5.2'
     implementation 'org.xerial:sqlite-jdbc:3.30.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
-    implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
-    testImplementation("org.junit.jupiter:junit-jupiter:5.6.2")
+    implementation 'com.jayway.jsonpath:json-path:2.4.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
     testImplementation 'org.mockito:mockito-core:3.3.3'
 }
 
