Add Dynamo DB for Settings

--- a/src/main/resources/sample-settings.properties
+++ b/src/main/resources/sample-settings.properties
@@ -4,3 +4,5 @@ lastfm=12345678
 channel=MyChannel
 lastFmUser=LastFmUser
 spotifyOAuth=bearerToken
+aws_access_key_id = AWS access key ID goes here
+aws_secret_access_key = Secret key goes here         
