--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'uno.rebellious'
-version '1.7.1-SNAPSHOT'
+version '1.8.0-SNAPSHOT'
 
 buildscript {
     ext.hamcrestVersion = '2.2'
@@ -42,6 +42,8 @@ dependencies {
     implementation 'org.xerial:sqlite-jdbc:3.30.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
     implementation 'com.jayway.jsonpath:json-path:2.4.0'
+    implementation platform('software.amazon.awssdk:bom:2.15.7')
+    implementation 'software.amazon.awssdk:dynamodb:2.15.7'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
     testImplementation 'org.mockito:mockito-core:3.3.3'
 }
