--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,3 @@
-group 'uno.rebellious'
-version '1.8.0-SNAPSHOT'
-
 buildscript {
     ext.hamcrestVersion = '2.2'
 
@@ -14,15 +11,20 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72'
         classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
     }
+}
+plugins {
+    id "org.jetbrains.kotlin.jvm" version "1.4.10"
 }
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'application'
 apply plugin: 'com.github.johnrengelman.shadow'
+
+group 'uno.rebellious'
+version '1.8.0-SNAPSHOT'
 
 mainClassName = 'uno.rebellious.twitchbot.MainKt'
 
@@ -35,12 +37,11 @@ repositories {
 
 dependencies {
     implementation 'com.github.salomonbrys.kotson:kotson:2.5.0'
-    implementation 'com.github.Gikkman:Java-Twirk:0.5'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72'
-    implementation 'com.github.kittinunf.fuel:fuel:2.2.1' //for JVM
-    implementation 'com.beust:klaxon:5.2'
+    implementation 'com.github.Gikkman:Java-Twirk:0.6.2'
+    implementation 'com.github.kittinunf.fuel:fuel:2.3.0' //for JVM
+    implementation 'com.beust:klaxon:5.4'
     implementation 'org.xerial:sqlite-jdbc:3.30.1'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
+    implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
     implementation 'com.jayway.jsonpath:json-path:2.4.0'
     implementation platform('software.amazon.awssdk:bom:2.15.7')
     implementation 'software.amazon.awssdk:dynamodb:2.15.7'
@@ -49,10 +50,14 @@ dependencies {
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 tasks.test {
