chore(): fix gradle

--- a/build.gradle
+++ b/build.gradle
@@ -71,5 +71,5 @@ jar {
     manifest {
         attributes 'Main-Class': 'uno.rebellious.twitchbot.MainKt'
     }
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    from { configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
 }
