--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,13 @@ buildscript {
 
     repositories {
         mavenCentral()
+        gradlePluginPortal()
+        maven {
+            url = uri("https://plugins.gradle.org/m2/")
+        }
     }
     dependencies {
-        classpath 'com.github.jengelman.gradle.plugins:shadow:6.1.0'
+        classpath 'gradle.plugin.com.github.johnrengelman:shadow:7.1.1'
     }
 }
 plugins {
