--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
     }
 }
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.9.10"
+    id "org.jetbrains.kotlin.jvm" version "2.1.0"
 }
 
 apply plugin: 'java'
@@ -34,6 +34,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.11.0'
     implementation 'com.github.Gikkman:Java-Twirk:0.7.1'
     implementation 'com.github.kittinunf.fuel:fuel:2.3.1' //for JVM
     implementation 'com.beust:klaxon:5.6'
